CHANGELOG
=========

All notable changes to the screensy project will be documented in this file.

The format is based on Keep a Changelog [0], and this project adheres to
Semantic Versioning [1].

UNRELEASED
----------

Added:
- The static index.html file for the website.
- The client-side TypeScript code.
- The stylesheet for the website.
- A tsconfig.json file for the client-side TypeScript.
- The rendezvous server TypeScript code.

[0]: https://keepachangelog.com/en/1.0.0/
[1]: https://semver.org/spec/v2.0.0.html
