@@ -1,0 +1,18 @@
+version: "3.3"
+services:
+        rendezvous:
+                build: "./screensy-rendezvous"
+                restart: unless-stopped
+                ports:
+                        - 4000:4000
+
+        caddy:
+                image: "caddy:2.3.0-alpine"
+                restart: unless-stopped
+                volumes:
+                        - ./Caddyfile:/etc/caddy/Caddyfile
+                        - ./screensy-website:/srv/screensy-website
+                ports:
+                        - 443:443
+                        - 80:80
+
